added volunteer registration

--- a/src/index.css
+++ b/src/index.css
@@ -224,3 +224,10 @@ textarea {
   background-position: center center;
   background-size: contain;
 }
+.volunteer-bg{
+  background-image: url('./assets/images/volunteer-1.png');
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  background-size: cover;
+  height: 250px;
+}
