--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ textarea {
   @apply pt-12 md:pt-14 lg:pt-[70px] xl:pt-[100px];
 }
 .nav-item {
-  @apply text-base font-semibold px-6 md:px-3 py-1 my-2 md:my-0 text-brand hover:text-secondary transition-all ease-in-out duration-200;
+  @apply text-sm lg:text-base font-semibold px-6 md:px-3 py-1 my-2 md:my-0 text-brand hover:text-secondary transition-all ease-in-out duration-200;
 }
 
 .dashboard-nav-item {
@@ -128,7 +128,7 @@ textarea {
   }
 }
 .slider-inner-card {
-  @apply bg-white m-5 shadow-[rgba(0,0,0,0.15)_1.95px_1.95px_2.6px] p-5 min-h-[320px] xl:min-h-[300px];
+  @apply m-5 shadow-[rgba(0,0,0,0.15)_1.95px_1.95px_2.6px] p-5 min-h-[320px] xl:min-h-[300px];
 }
 
 .testimonial-card {
