--- a/src/index.css
+++ b/src/index.css
@@ -229,7 +229,7 @@ textarea {
 }
 
 .volunteer-bg{
-  background-image: url('./assets/images/volunteer-1.png');
+  background-image: url('./assets/images/volunteer-1.jpg');
   background-repeat: no-repeat;
   background-position: bottom center;
   background-size: cover;
